--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -26,7 +26,7 @@ jobs:
         key: ${{ runner.os }}-docker-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-docker-
-
+    
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -36,8 +36,8 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
-        file: Dockerfile
+        context: ./app  # Set the context to the /app folder (the folder containing the Dockerfile)
+        file: ./app/Dockerfile  # Specify the path to the Dockerfile inside /app
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/hive-app:latest
 
