Update build-push.yml to only activate when app.py is modified

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -3,10 +3,14 @@ name: Build and Push Docker Image to Docker Hub
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the main branch (you can change this to your preferred branch)
+      - main  # Trigger on pushes to the main branch
+    paths:
+      - 'app/app.py'  # Only trigger when app.py changes
   pull_request:
     branches:
       - main  # Trigger on pull requests targeting the main branch
+    paths:
+      - 'app/app.py'  # Only trigger when app.py changes
 
 jobs:
   build:
