--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,4 @@
-API_VERSION=0.5.0
-SENSEBOX_IDS=5eba5fbad46fb8001b799786
+API_VERSION=0.9.0
+SENSEBOX_IDS=5eba5fbad46fb8001b799786,5b267cac1fef04001b78f88b,5d13ec6630bde6001a618df5,5d0fc7fd30bde6001a364a79
+SENSEBOX_NAMES=test,Hotzelsroda,EAWartenberg,Gerstungen
 
