--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,19 @@
 # python app dockerfile
 
-FROM python:3.13.1
+FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY requirements.txt /app/
-RUN pip3 install --no-cache-dir -r requirements.txt
+# Install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app/
+COPY . .
+
+ENV FLASK_APP=app.py
+ENV FLASK_RUN_PORT=5000
+ENV FLASK_RUN_HOST=0.0.0.0
 
 EXPOSE 5000
 
-CMD [ "python3", "-m", "flask", "run", "--host=0.0.0.0" ]
+CMD ["python", "app.py"]
