several updates and bug fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,14 +31,17 @@ services:
       - monitor
 
   grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/etc/grafana/dashboards
-    networks:
-      - monitor
+      image: grafana/grafana
+      ports:
+        - "3000:3000"
+      volumes:
+        - ./grafana/provisioning:/etc/grafana/provisioning
+        - ./grafana/dashboards:/etc/grafana/dashboards
+      depends_on:
+        - prometheus
+      networks:
+        - monitor
+
 
 networks:
   monitor:
