--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -24,7 +24,6 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Cache Docker layers
-      id: docker-cache
       uses: actions/cache@v3
       with:
         path: /tmp/.buildx-cache
@@ -38,8 +37,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
+    - name: Build and Push Docker image
       uses: docker/build-push-action@v3
       with:
         context: ./app
-        file: ./app/Docker
+        file: ./app/Dockerfile
+        push: true
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/hive-monitor:latest
+          ${{ secrets.DOCKER_USERNAME }}/hive-monitor:${{ github.sha }}
