--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - 'app/app.py'
+      - 'app/**'  # build on any change in app folder, safer than just app.py
   pull_request:
     branches:
       - main
     paths:
-      - 'app/app.py'
+      - 'app/**'
 
 jobs:
   build:
@@ -27,9 +27,9 @@ jobs:
       uses: actions/cache@v3
       with:
         path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-docker-${{ github.sha }}
+        key: ${{ runner.os }}-docker-buildx-${{ github.ref }}
         restore-keys: |
-          ${{ runner.os }}-docker-
+          ${{ runner.os }}-docker-buildx-
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -46,3 +46,6 @@ jobs:
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/hive-monitor:latest
           ${{ secrets.DOCKER_USERNAME }}/hive-monitor:${{ github.sha }}
+
+    - name: Verify Docker buildx version
+      run: docker buildx version
