--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,19 +1,20 @@
-# python app dockerfile
-
 FROM python:3.12-slim
 
 WORKDIR /app
 
-# Install dependencies
+# Copy requirements and install dependencies first (layer caching)
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the app
 COPY . .
 
+# Set environment variables for Flask
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_PORT=5000
 ENV FLASK_RUN_HOST=0.0.0.0
 
 EXPOSE 5000
 
+# Run the app directly
 CMD ["python", "app.py"]
