--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,7 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'flask-app'
+  - job_name: 'hive-monitor'
     static_configs:
       - targets: ['web:5000']
-      
