Changed app to include bootstrap, nginx as reverse proxy for the docker-compose apps, restructured grafana folder and started anew, added an About page to the app/website, commit to CI/CD and start testing & create a dashboard

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -44,8 +44,8 @@ jobs:
         file: ./app/Dockerfile
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/hive-monitor:latest
-          ${{ secrets.DOCKER_USERNAME }}/hive-monitor:${{ github.sha }}
+          ${{ secrets.DOCKER_USERNAME }}/hive-monitor-bootstrap:latest
+          ${{ secrets.DOCKER_USERNAME }}/hive-monitor-bootstrap:${{ github.sha }}
 
     - name: Verify Docker buildx version
       run: docker buildx version
