--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,31 @@
-version: '3.8'
+#version: '3.8'
 
 services:
   web:
     image: sknezu/hive-monitor:latest
+    restart: unless-stopped
     ports:
       - "5000:5000"
     networks:
       - monitor
 
-#  nginx:
-#    image: nginx:latest
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-#    depends_on:
-#      - web
-#    networks:
-#      - monitor
+  nginx:
+    image: nginx:latest
+    restart: unless-stopped 
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - web
+      - grafana
+      - prometheus
+    networks:
+      - monitor
 
   prometheus:
     image: prom/prometheus
+    restart: unless-stopped    
     ports:
       - "9090:9090"
     volumes:
@@ -32,12 +37,14 @@ services:
 
   grafana:
     image: grafana/grafana
+    container_name: grafana
+    restart: unless-stopped
     ports:
       - "3000:3000"
     volumes:
-      - ./grafana/dashboards/hive-dashboard.json:/var/lib/grafana/dashboards/hive-dashboard.json
-      - ./grafana/provisioning/dashboards/dashboards.yaml:/var/lib/grafana/provisioning/dashboards/dashboards.yaml
-      - ./grafana/provisioning/datasources/datasources.yaml:/var/lib/grafana/provisioning/datasources/datasources.yaml
+      - grafana_storage:/var/lib/grafana
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     depends_on:
       - prometheus
     networks:
@@ -45,3 +52,6 @@ services:
 
 networks:
   monitor:
+
+volumes:
+  grafana_storage: {}
