--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,15 +5,19 @@ server {
         proxy_pass http://web:5000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /metrics {
-        proxy_pass http://web:5000/metrics;
+    location /grafana/ {
+        proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/grafana/(.*) /$1 break;
+    }
+
+    location /prometheus/ {
+        proxy_pass http://prometheus:9090/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        rewrite ^/prometheus/(.*) /$1 break;
     }
 }
