--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,14 +7,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /grafana/ {
+    location ^~ /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         rewrite ^/grafana/(.*) /$1 break;
     }
 
-    location /prometheus/ {
+    location ^~ /prometheus/ {
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
