Fixed nginx proxy conf file

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,7 @@ server {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         rewrite ^/grafana/(.*) /$1 break;
     }
 
@@ -18,6 +19,8 @@ server {
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
         rewrite ^/prometheus/(.*) /$1 break;
     }
+
 }
