--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,20 +7,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location ^~ /grafana/ {
+    location /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/grafana/(.*) /$1 break;
     }
 
-    location ^~ /prometheus/ {
+    location /prometheus/ {
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/prometheus/(.*) /$1 break;
     }
-
 }
