--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,16 +8,18 @@ server {
     }
 
     location /grafana/ {
-        proxy_pass http://grafana:3000/;
+        proxy_pass http://grafana:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect / /grafana/;  # fix redirects inside Grafana
     }
 
     location /prometheus/ {
-        proxy_pass http://prometheus:9090/;
+        proxy_pass http://prometheus:9090;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect / /prometheus/;  # fix redirects inside Prometheus
     }
 }
