--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,18 +8,21 @@ server {
     }
 
     location /grafana/ {
-        proxy_pass http://grafana:3000;
+        proxy_pass http://grafana:3000/grafana/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect / /grafana/;  # fix redirects inside Grafana
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
     }
 
     location /prometheus/ {
-        proxy_pass http://prometheus:9090;
+        proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect / /prometheus/;  # fix redirects inside Prometheus
+        proxy_redirect off;
     }
+
 }
