--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,11 +18,14 @@ server {
     }
 
     location /prometheus/ {
-        proxy_pass http://prometheus:9090/;
+        proxy_pass http://prometheus:9090;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Prefix /prometheus;
         proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
 }
