created dashboard and added to provisioning files for persistence

--- a/grafana/provisioning/datasources/datasource.yaml
+++ b/grafana/provisioning/datasources/datasource.yaml
@@ -4,5 +4,5 @@ datasources:
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: /prometheus/
+    url: http://nginx/prometheus/
     isDefault: true
