updated name from test sensebox and added grafana credentials to website for easier comprehension

--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
 API_VERSION=1.1.0
 SENSEBOX_IDS=5eba5fbad46fb8001b799786,5b267cac1fef04001b78f88b,5d13ec6630bde6001a618df5,5d0fc7fd30bde6001a364a79
-SENSEBOX_NAMES=test,Hotzelsroda,EAWartenberg,Gerstungen
+SENSEBOX_NAMES=GroßGlienicke,Hotzelsroda,EAWartenberg,Gerstungen
 
